--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,14 @@ form {
   opacity: 1;
 }
 
+.char-counter {
+  display: block;
+  text-align: right;
+  font-size: 12px;
+  color: var(--text-color);
+  margin-top: 5px;
+}
+
 /* Emote */
 .emote {
   position: absolute;
