--- a/styles.css
+++ b/styles.css
@@ -418,3 +418,15 @@ button {
   background-color: var(--input-bg);
   color: var(--text-color);
 }
+
+/* Acessibilidade */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
